manifests/integrated-tools/fleet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fleet
  template:
    metadata:
      labels:
        app: fleet
    spec:
      imagePullSecrets:
        - name: github-pat-secret

      containers:
      - name: openframe-fleetmdm
        image: openframe-fleetmdm
        ports:
        - containerPort: 8070
        volumeMounts:
        - name: fleet-logs
          mountPath: /var/log/osquery
        livenessProbe:
          httpGet:
            path: /setup
            port: 8070
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: fleet-logs
        persistentVolumeClaim:
          claimName: fleet-mdm-fleet-logs
